# strpool

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: hash.rs  large.rs  lib.rs  serde.rs  small.rs  static_pool.rs  traits.rs
