[package]
name = "strpool"
description = "String Pools / Strings Interning"
version = "1.0.0"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
license = "MIT"
keywords = [ "str", "intern", "pool", "ustr", "no_std" ]
categories = [ "caching", "no_std" ]
repository = "https://github.com/NathanRoyer/strpool"

[lib]

[dependencies]
ahash = { version = "0.8.3", default-features = false }

[build-dependencies]
rand = "0.8.5"

[features]
