[package]
name = "strpool"
description = "String Pools / Strings Interning"
version = "1.1.1"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
license = "MIT"
keywords = [ "str", "intern", "pool", "ustr", "no_std" ]
categories = [ "caching", "no-std" ]
repository = "https://github.com/NathanRoyer/strpool"

[lib]

[dependencies]
cityhasher = { version = "0.1", default-features = false }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

[build-dependencies]
rand = "0.8"

[features]
std = []
serde = [ "dep:serde", "std" ]
